--- a/themes/landscape_test/languages/en.yml
+++ b/themes/landscape_test/languages/en.yml
@@ -6,7 +6,7 @@ tweets: Tweets
 prev: Prev
 next: Next
 comment: Comments
-archive_a: Archives___
+archive_a: Archives---
 archive_b: "Archives: %s"
 page: Page %d
 recent_posts: Recent Posts
